--- a/src/main/resources/templates/profile/index.html
+++ b/src/main/resources/templates/profile/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" 
+<html xmlns:th="http://www.thymeleaf.org"
 	th:replace="~{layouts/default :: layout(~{::title}, _, ~{::nav}, ~{::content})}">
 <head>
-    <title>Perfil de Usuario</title>
+<title>Perfil de Usuario</title>
 </head>
 <body>
 	<nav th:fragment="nav" aria-label="breadcrumb">
@@ -13,8 +13,46 @@
 	</nav>
 
 	<th:block th:fragment="content">
-		CONTENT
-	
+
+		<div class="alert alert-warning"
+			th:if="${#authorization.expression('isAnonymous()')}">Ud. no
+			est&acute; autenticado</div>
+		<div class="card-body">
+
+			<div class="form-group row">
+				<label for="nombres" class="col-sm-2 col-form-label">Nombres</label>
+				<div class="col-sm-10">
+					<input type="text" id="nombres" class="form-control-plaintext"
+						th:value="${#authentication.principal.nombres}" readonly>
+				</div>
+			</div>
+			<div class="form-group row">
+				<label for="apellidos" class="col-sm-2 col-form-label">Apellidos</label>
+				<div class="col-sm-10">
+					<input type="text" id="apellidos" class="form-control-plaintext"
+						th:value="${#authentication.principal.apellidos}" readonly>
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label for="email" class="col-sm-2 col-form-label">Email</label>
+				<div class="col-sm-10">
+					<input type="text" id="email" class="form-control-plaintext"
+						th:value="${#authentication.principal.email}" readonly>
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label for="rol" class="col-sm-2 col-form-label">Rol</label>
+				<div class="col-sm-10">
+					<input type="text" id="rol" class="form-control-plaintext"
+						th:value="${#authentication.principal.rol.nombre}" readonly>
+				</div>
+			</div>
+
+		</div>
+		<div class="card-footer"></div>
+
 	</th:block>
 
 </body>
