--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -52,7 +52,7 @@
 					</div>
 				</li>
 			</ul>
-			<ul class="navbar-nav">
+			<ul class="navbar-nav" sec:authorize="isAnonymous()">
 				<li class="nav-item">
 					<a class="nav-link" href="#">Sing Up</a>
 				</li>
@@ -60,12 +60,12 @@
 					<a class="nav-link" href="#">Login</a>
 				</li>
 			</ul>
-			<ul class="navbar-nav">
+			<ul class="navbar-nav" sec:authorize="isAuthenticated()">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Profile</a>
+					<a class="nav-link" th:href="@{/profile/}">Profile</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Logout</a>
+					<a class="nav-link" th:href="@{/logout}">Logout</a>
 				</li>
 			</ul>
 		</div>
