--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
 
                 <div class="card-body">
 
-                    <form id="loginform" class="form-horizontal" role="form" action="" th:action="@{/authenticate}" method="post" data-toggle="validator">
+                    <form id="loginform" class="form-horizontal" role="form" th:action="@{/authenticate}" method="post" data-toggle="validator">
 
 						<div class="form-group">
 	                        <div class="input-group">
